--- a/figlet.yaml
+++ b/figlet.yaml
@@ -1,7 +1,7 @@
 package:
   name: figlet
   version: 2.2.5
-  epoch: 15
+  epoch: 0
   description: Program that creates large characters out of ordinary screen characters.
   copyright:
     - license: BSD-3-Clause
@@ -11,30 +11,16 @@ environment:
     packages:
       - build-base
       - busybox
-      - ca-certificates-bundle
 
 pipeline:
-  # We can't use go/install because this requires a specific go version
   - uses: git-checkout
     with:
       repository: https://github.com/cmatsuoka/figlet
       branch: master
-
   - name: Configure and build
     runs: |
       make clean
-      DEFAULTFONTDIR=/usr/share/figlet/fonts make all
-
-  - name: Install Figlet and Fonts
-    runs: |
       make DESTDIR="${{targets.destdir}}" BINDIR=/usr/bin MANDIR=/usr/share/man DEFAULTFONTDIR=/usr/share/figlet/fonts install
-
-  - name: "Debug: Check paths"
-    runs: |
-      echo "Available binaries in /usr/bin:"
-      ls -l /usr/bin/
-      echo "Available binaries in /bin:"
-      ls -l /bin/
 
 update:
   enabled: false
@@ -45,25 +31,21 @@ test:
     contents:
       packages:
         - bash
-        - file
+        - git
   pipeline:
     - name: "Basic functionality"
       runs: |
-        if ! command -v figlet >/dev/null; then
-        echo "Figlet binary not found!"
-        exit 1
-        fi
-        # echo "Hello" | figlet
-    - name: "Figlet custom font support"
+        figlet -v | grep -q "${{package.version}}"
+    - name: Clone Test Repository
       runs: |
-        figlet -d /usr/share/figlet/fonts -f slant "Test" >> test.txt
-        cat test.txt
-    - name: "Check if Figlet is statically linked"
+        git clone https://github.com/cmatsuoka/figlet.git
+    - name: Configure tests to run with installed figlet, not local binary
       runs: |
-        if ldd $(command -v figlet) >/dev/null 2>&1; then
-        echo "Figlet is dynamically linked!"
-        exit 1
-        fi
-    - name: "Test monitoring server startup"
+        sed -i 's|CMD="./figlet"|CMD="figlet"|' figlet/run-tests.sh
+        sed -i 's|FIGLET=$DIR/figlet|FIGLET="figlet"|' figlet/showfigfonts
+        sed -i 's|$cmd -f  tests/flowerpower -R|$CMD -f tests/flowerpower -R "figlet"|' figlet/run-tests.sh
+    - name: Run Figlet Tests
       runs: |
-        file $(command -v figlet) | grep "statically linked"
+        cd figlet
+        ./run-tests.sh
+
