--- a/nats-box.yaml
+++ b/nats-box.yaml
@@ -1,7 +1,7 @@
 package:
   name: nats-box
   version: 0.16.0
-  epoch: 5
+  epoch: 0
   description: NATS utilities toolbox.
   dependencies:
     runtime:
@@ -12,7 +12,7 @@ package:
       - ca-certificates
       - curl
       - jq
-      # - figlet
+      - figlet
   copyright:
     - license: Apache-2.0
 
@@ -53,5 +53,5 @@ test:
         update-ca-certificates --version
         curl --version
         jq --version
-      # figlet -v
+        figlet -v
     
