--- a/figlet.yaml
+++ b/figlet.yaml
@@ -22,7 +22,7 @@ pipeline:
 
   - uses: autoconf/make-install
     with:
-      opts: "DEFAULTFONTDIR=/usr/share/figlet/fonts DESTDIR=${{targets.destdir}} BINDIR=/usr/bin MANDIR=/usr/share/man"
+      opts: "DEFAULTFONTDIR=/usr/share/figlet/fonts BINDIR=/usr/bin MANDIR=/usr/share/man"
 
 subpackages:
   - name: figlet-doc
