added subpackage zipkin-slim
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/zipkin.yaml
+++ b/zipkin.yaml
@@ -25,6 +25,7 @@ environment:
       - ca-certificates-bundle
       - maven
       - openjdk-21
+      - unzip
 
 pipeline:
   - uses: git-checkout
@@ -32,14 +33,14 @@ pipeline:
       repository: https://github.com/openzipkin/zipkin
       tag: ${{package.version}}
       expected-commit: 0f8fc88d33131dc938532322e19126def8cad8e8
-  - uses: maven/pombump
-  - runs: |
-      export JAVA_HOME="/usr/lib/jvm/java-21-openjdk"
-      ./build-bin/maven/maven_build_or_unjar io.zipkin zipkin-server ${{package.version}} exec
-      mv zipkin-server zipkin
-      mkdir -p ${{targets.destdir}}/usr/share/zipkin
-      cp -av zipkin/* ${{targets.destdir}}/usr/share/zipkin/
 
+  - runs: |
+      export JAVA_HOME=/usr/lib/jvm/java-21-openjdk
+      ./mvnw -X -q --batch-mode -DskipTests --also-make -pl zipkin-server clean install
+      mkdir -p ${{targets.destdir}}/zipkin
+      mkdir -p ${{targets.destdir}}/usr/local/bin
+      unzip zipkin-server/target/zipkin-server-*-exec.jar -d ${{targets.destdir}}/zipkin
+      cp -av docker/start-zipkin ${{targets.destdir}}/usr/local/bin/
 
 subpackages:
   - name: zipkin-slim
@@ -52,11 +53,33 @@ subpackages:
     pipeline:
       - runs: |
           export JAVA_HOME="/usr/lib/jvm/java-21-openjdk"
-          ./build-bin/maven/maven_build_or_unjar io.zipkin zipkin-server ${{package.version}} slim
-          mv zipkin-server zipkin-slim
-          mkdir -p ${{targets.subpkgdir}}/usr/share/zipkin-slim
-          cp -av zipkin-slim/* ${{targets.subpkgdir}}/usr/share/zipkin-slim/
-    
+          mkdir -p ${{targets.subpkgdir}}/zipkin
+          mkdir -p ${{targets.subpkgdir}}/usr/local/bin
+          unzip zipkin-server/target/zipkin-server-*-slim.jar -d ${{targets.subpkgdir}}/zipkin
+          cp -av docker/start-zipkin ${{targets.subpkgdir}}/usr/local/bin/
+    test:
+      pipeline:
+        - name: Running the server
+          uses: test/daemon-check-output
+          working-directory: /zipkin
+          with:
+            start: |
+              start-zipkin
+            timeout: 60
+            expected_output: |
+              Serving HTTP at /0.0.0.0:9411 - http://127.0.0.1:9411/
+
+test:
+  pipeline:
+    - name: Running the server
+      uses: test/daemon-check-output
+      working-directory: /zipkin
+      with:
+        start: |
+          start-zipkin
+        timeout: 60
+        expected_output: |
+          Serving HTTP at /0.0.0.0:9411 - http://127.0.0.1:9411/
 
 update:
   enabled: true
