fixed tests so hopefully it'll pass CI
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/zipkin.yaml
+++ b/zipkin.yaml
@@ -67,7 +67,8 @@ subpackages:
               start-zipkin
             timeout: 60
             expected_output: |
-              Serving HTTP at /0.0.0.0:9411 - http://127.0.0.1:9411/
+              Serving HTTP
+              http://127.0.0.1:9411/
 
 test:
   pipeline:
@@ -79,7 +80,8 @@ test:
           start-zipkin
         timeout: 60
         expected_output: |
-          Serving HTTP at /0.0.0.0:9411 - http://127.0.0.1:9411/
+          Serving HTTP
+          http://127.0.0.1:9411/
 
 update:
   enabled: true
