gitlab-runner-17.8: fix docker go bumps

--- a/gitlab-runner-17.8.yaml
+++ b/gitlab-runner-17.8.yaml
@@ -33,8 +33,7 @@ pipeline:
     with:
       deps: |-
         github.com/go-jose/go-jose/v3@v3.0.4
-        github.com/docker/docker@v25.0.4,
-        26.0.0-rc1
+        github.com/docker/docker@v26.1.5
 
   - name: Verify base-images-tag matches the expected upstream value
     runs: |
@@ -86,8 +85,7 @@ pipeline:
         github.com/golang-jwt/jwt/v4@v4.5.1
         golang.org/x/crypto@v0.31.0
         golang.org/x/net@v0.33.0
-        github.com/docker/docker@v25.0.4,
-        26.0.0-rc1
+        github.com/docker/docker@v26.1.5
       modroot: ./machine
 
   - uses: go/build
