--- a/pypy-3.11.yaml
+++ b/pypy-3.11.yaml
@@ -218,7 +218,7 @@ test:
         pip cache dir | xargs ls -al
 
 update:
-  enabled: true
+  enabled: false
   github:
     identifier: pypy/pypy
     strip-prefix: release-pypy3.11-v
