--- a/pipelines/test/tw/ldd-check.yaml
+++ b/pipelines/test/tw/ldd-check.yaml
@@ -11,8 +11,10 @@ inputs:
     required: false
   packages:
     description: |
-      Check all binaries in these installed packages
+      Check all binaries in these installed packages.
+      Use "none" to disable the default package check.
     required: false
+    default: "${{context.name}}"
   verbose:
     description: |
       Should the full ldd output be shown
