--- a/xz.yaml
+++ b/xz.yaml
@@ -1,7 +1,7 @@
 package:
   name: xz
   version: "5.6.4"
-  epoch: 1
+  epoch: 2
   description: "Library and CLI tools for XZ and LZMA compressed files"
   copyright:
     - license: GPL-3.0-or-later
@@ -46,8 +46,6 @@ subpackages:
       pipeline:
         - uses: test/pkgconf
         - uses: test/tw/ldd-check
-          with:
-            packages: xz-dev
 
   - name: "xz-doc"
     description: "xz documentation"
@@ -118,9 +116,7 @@ test:
         xz -t data.txt.xz
         xz -d data.txt.xz
         cmp data.txt data.bak
-    - uses: test/ldd-check
-      with:
-        packages: ${{package.name}}
+    - uses: test/tw/ldd-check
 
 update:
   enabled: true
