--- a/tw.yaml
+++ b/tw.yaml
@@ -1,14 +1,16 @@
 package:
   name: tw
-  version: 0.0.3
+  version: 0.0.4
   epoch: 0
-  description:
+  description: Testing tools
   options:
     no-provides: true
   copyright:
     - license: Apache-2.0
 
 environment:
+  environment:
+    GOMODCACHE: /var/cache/melange
   contents:
     packages:
       - build-base
@@ -21,7 +23,7 @@ pipeline:
     with:
       repository: https://github.com/chainguard-dev/tw
       tag: v${{package.version}}
-      expected-commit: ff5dd2febb74a5fab995f08478a1a8ea22f329f3
+      expected-commit: 035aca6f5a6fca28f6bece9624d79d638d58226d
 
   # Make the tw binary in the main package so we don't end up with `tw-tw`
   - runs: |
@@ -30,6 +32,14 @@ pipeline:
   - uses: strip
 
 subpackages:
+  - name: twt
+    options:
+      no-provides: true
+    pipeline:
+      - runs: |
+          install -Dm755 tw/bin/twt ${{targets.contextdir}}/usr/bin/twt
+      - uses: strip
+
   - name: ldd-check
     options:
       no-provides: true
@@ -46,6 +56,43 @@ subpackages:
         - runs: |
             [ -f /usr/bin/ldd-check ]
             [ -x /usr/bin/ldd-check ]
+
+  - name: header-check
+    options:
+      no-provides: true
+    dependencies:
+      runtime:
+        - apk-tools
+        - autoconf
+        - build-base
+        - busybox
+    pipeline:
+      - runs: |
+          make -C header-check MELANGE_CONTEXTDIR=${{targets.contextdir}} melange-install
+    test:
+      pipeline:
+        - runs: |
+            [ -f /usr/bin/header-check ]
+            [ -x /usr/bin/header-check ]
+
+  - name: syspeek
+    options:
+      no-provides: true
+    dependencies:
+      runtime:
+        - apk-tools
+        - binutils
+        - busybox
+        - linux-headers
+        - posix-libc-utils
+    pipeline:
+      - runs: |
+          make -C syspeek-tool MELANGE_CONTEXTDIR=${{targets.contextdir}} melange-install
+    test:
+      pipeline:
+        - runs: |
+            [ -f /usr/bin/syspeek ]
+            [ -x /usr/bin/syspeek ]
 
   - name: usrmerge-tool
     options:
