--- a/fluent-operator.yaml
+++ b/fluent-operator.yaml
@@ -6,16 +6,6 @@ package:
   copyright:
     - license: Apache-2.0
 
-var-transforms:
-  - from: ${{package.version}}
-    match: ^(\d)\.(\d)\.(\d)$
-    replace: $1
-    to: fluent-major-version
-  - from: ${{package.version}}
-    match: ^(\d)\.(\d)\.(\d)$
-    replace: $2
-    to: fluent-minor-version
-
 pipeline:
   - uses: git-checkout
     with:
@@ -74,7 +64,11 @@ subpackages:
         # When this test fails, that likely means fluent-bit rolled forward to
         # a new version stream anad must be updated in the "replaces" block
         # below
-        - fluent-bit-${{vars.fluent-major-version}}.${{vars.fluent-minor-version}}
+        #
+        # Both fluent-bit and fluent-operator doesn't follow same versioning
+        # and resulting inconsistency for the replaces block, so we have to
+        # use always latest version of fluent-bit here.
+        - fluent-bit
     pipeline:
       - runs: |
           mkdir -p "${{targets.contextdir}}"/fluent-bit/etc
