--- a/superset.yaml
+++ b/superset.yaml
@@ -1,7 +1,7 @@
 package:
   name: superset
   version: 4.1.1
-  epoch: 6
+  epoch: 7
   description: Data Visualization and Data Exploration Platform
   copyright:
     - license: Apache-2.0
@@ -16,6 +16,8 @@ package:
     no-provides: true
   dependencies:
     runtime:
+      - libgomp
+      - libtbb-dev
       - openssl
       - py${{vars.python-version}}-pip
       - python-${{vars.python-version}}
@@ -156,6 +158,9 @@ test:
       packages:
         - ${{package.name}}-entrypoint
   pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: ${{package.name}}
     - uses: test/daemon-check-output
       with:
         start: |
