Add the ldd-check test to some packages

--- a/openmp-16.yaml
+++ b/openmp-16.yaml
@@ -1,10 +1,13 @@
 package:
   name: openmp-16
   version: 16.0.6
-  epoch: 2
+  epoch: 3
   description: "LLVM OpenMP library"
   copyright:
     - license: Apache-2.0
+  dependencies:
+    runtime:
+      - libLLVM-16
 
 environment:
   contents:
@@ -67,6 +70,12 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: ${{package.name}}
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: ${{package.name}}
 
 update:
   enabled: true
