--- a/datadog-agent-nvml.yaml
+++ b/datadog-agent-nvml.yaml
@@ -1,7 +1,7 @@
 package:
   name: datadog-agent-nvml
   version: 1.0.9
-  epoch: 4
+  epoch: 5
   description: "Checks NVIDIA Management Library (NVML) exposed metrics through the Datadog Agent and can correlate them with the exposed Kubernetes devices"
   copyright:
     - license: Apache-2.0
@@ -106,6 +106,9 @@ test:
     environment:
       PYTHONPATH: ${{vars.dd_shared}}/lib/python${{vars.python_version}}/site-packages
   pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: ${{package.name}}
     - runs: |
         stat /etc/datadog-agent/conf.d/nvml.d/conf.yaml.example
         stat ${{vars.dd_shared}}/lib/python${{vars.python_version}}/site-packages/datadog_checks/nvml/__init__.py
