--- a/openmp-17.yaml
+++ b/openmp-17.yaml
@@ -1,10 +1,13 @@
 package:
   name: openmp-17
   version: 17.0.6
-  epoch: 4
+  epoch: 5
   description: "LLVM OpenMP library"
   copyright:
     - license: Apache-2.0
+  dependencies:
+    runtime:
+      - libLLVM-17
 
 environment:
   contents:
@@ -61,6 +64,12 @@ subpackages:
     dependencies:
       runtime:
         - openmp-17
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: ${{package.name}}
 
 update:
   enabled: true
