--- a/imagemagick-7.yaml
+++ b/imagemagick-7.yaml
@@ -1,7 +1,7 @@
 package:
   name: imagemagick-7
   version: "7.1.1.45"
-  epoch: 0
+  epoch: 1
   description: ImageMagick® is a free, open-source software suite, used for editing and manipulating digital images.
   copyright:
     - license: GPL-3.0-only
@@ -131,3 +131,6 @@ test:
         magick --help
         magick-script --help
         montage --help
+    - uses: test/tw/ldd-check
+      with:
+        packages: imagemagick-7
