add tests for bazelisk, fix runtime dependency problem

--- a/bazelisk.yaml
+++ b/bazelisk.yaml
@@ -1,13 +1,14 @@
 package:
   name: bazelisk
   version: 1.25.0
-  epoch: 2
+  epoch: 3
   description: A user-friendly launcher for Bazel.
   copyright:
     - license: Apache-2.0
   dependencies:
     runtime:
       - ca-certificates-bundle
+      - libstdc++
 
 environment:
   contents:
@@ -47,3 +48,10 @@ update:
   github:
     identifier: bazelbuild/bazelisk
     strip-prefix: v
+
+test:
+  pipeline:
+    - runs: |
+        bazelisk help
+        bazelisk version
+        bazelisk license >/dev/null
