address furkan comments
Signed-off-by: YashPimple <yashpimple22@gmail.com>

--- a/nats-server-config-reloader.yaml
+++ b/nats-server-config-reloader.yaml
@@ -17,12 +17,7 @@ pipeline:
     with:
       packages: ./cmd/nats-server-config-reloader
       output: nats-server-config-reloader
-      ldflags: -X main.BuildTime=$(date -u +%Y-%m-%dT%H:%M:%S%z) -X main.GitInfo=$(git rev-parse --abbrev-ref HEAD)-$(git rev-parse --short HEAD)$(git diff --quiet || echo "-dirty") -X main.Version=${{package.version}}
-
-  - runs: |
-      mkdir -p ${{targets.destdir}}/usr/local/bin
-      cp -r ${{targets.destdir}}/usr/bin/nats-server-config-reloader ${{targets.destdir}}/usr/local/bin/nats-server-config-reloader
-      chmod 755 ${{targets.destdir}}/usr/local/bin/nats-server-config-reloader
+      ldflags: -X main.BuildTime=$(date -u +%Y-%m-%dT%H:%M:%S%z) -X main.GitInfo=$(git rev-parse --abbrev-ref HEAD)-$(git rev-parse --short HEAD)$(git diff --quiet || echo "-dirty") -X main.Version=v${{package.version}}
 
   - uses: strip
 
@@ -31,6 +26,8 @@ subpackages:
     description: "Compat package for ${{package.name}}"
     pipeline:
       - runs: |
+          mkdir -p ${{targets.contextdir}}/usr/local/bin
+          ln -sf /usr/bin/nats-server-config-reloader ${{targets.contextdir}}/usr/local/bin/nats-server-config-reloader
           ln -sf /usr/local/bin/nats-server-config-reloader ${{targets.contextdir}}/nats-server-config-reloader
     test:
       environment:
@@ -41,13 +38,13 @@ subpackages:
         - runs: |
             /usr/bin/nats-server-config-reloader --help
             /usr/local/bin/nats-server-config-reloader --help
+            /nats-server-config-reloader --help
 
   - name: ${{package.name}}-oci-entrypoint
     description: Entrypoint for ${{package.name}}
     pipeline:
       - runs: |
-          cp cicd/assets/entrypoint.sh ${{targets.contextdir}}/entrypoint.sh
-          chmod +x ${{targets.contextdir}}/entrypoint.sh
+          install -m755 cicd/assets/entrypoint.sh ${{targets.contextdir}}/entrypoint.sh
       - uses: strip
     test:
       pipeline:
@@ -72,7 +69,7 @@ test:
   pipeline:
     - name: "Verify basic installation"
       runs: |
-        nats-server-config-reloader --version
+        nats-server-config-reloader --version 2>&1 | grep "${{package.version}}"
         nats-server-config-reloader --help
     - name: "Test nats-server-config-reloader with nats-server"
       runs: |
