--- a/nats-server-config-reloader.yaml
+++ b/nats-server-config-reloader.yaml
@@ -72,43 +72,29 @@ test:
         nats-server-config-reloader --version 2>&1 | grep "${{package.version}}"
         nats-server-config-reloader --help
     - name: "Test nats-server-config-reloader with nats-server"
-      runs: |
-        echo "Starting NATS server with a configuration file..."
-        cat <<EOF > /tmp/nats-server.conf
-        pid_file: "/tmp/nats-server.pid"
-        http: 8222
-        EOF
+      uses: test/daemon-check-output
+      with:
+        setup: |
+          cat <<EOF > /tmp/nats-server.conf
+          pid_file: "/tmp/nats-server.pid"
+          http: 8222
+          EOF
+          nats-server -c /tmp/nats-server.conf -l /tmp/nats-server.log &
+          sleep 10
+        start: nats-server-config-reloader -config /tmp/nats-server.conf -pid /tmp/nats-server.pid
+        timeout: 30
+        expected_output: |
+          Watching file: /tmp/nats-server.conf
+        post: |
+          #!/bin/sh -e
+          echo "Modifying config to reload..."
+          cat <<EOF > /tmp/nats-server.conf
+          pid_file: "/tmp/nats-server.pid"
+          http: 8222
+          debug: true
+          EOF
 
-        nats-server -c /tmp/nats-server.conf -l /tmp/nats-server.log &
-        sleep 2
+          sleep 5
 
-        echo "Verifying NATS server process..."
-        if ! pgrep -f "nats-server -c /tmp/nats-server.conf"; then
-          echo "NATS server did not start properly!"
-          exit 1
-        fi
-
-        # Start the config reloader in the background
-        nats-server-config-reloader -config /tmp/nats-server.conf -pid /tmp/nats-server.pid &
-        RELOADER_PID=$!
-        sleep 2
-
-        echo "Modifying config to reload..."
-        cat <<EOF > /tmp/nats-server.conf
-        pid_file: "/tmp/nats-server.pid"
-        http: 8222
-        debug: true
-        EOF
-
-        sleep 5
-
-        echo "Checking NATS server logs for reload confirmation..."
-        cat /tmp/nats-server.log
-
-        # Validate that the reload occurred by checking logs
-        if ! grep -q "Reloaded: debug = true" /tmp/nats-server.log; then
-          echo "Error: Config reload for debug=true not detected in logs!"
-          exit 1
-        fi
-
-        echo "Config reload test passed successfully!"
+          echo "Checking NATS server logs for reload confirmation..."
+          cat /tmp/nats-server.log
