add validation for reloader
Signed-off-by: YashPimple <yashpimple22@gmail.com>

--- a/nats-server-config-reloader.yaml
+++ b/nats-server-config-reloader.yaml
@@ -98,3 +98,9 @@ test:
 
           echo "Checking NATS server logs for reload confirmation..."
           cat /tmp/nats-server.log
+
+          if ! grep -q "Reloaded: debug = true" /tmp/nats-server.log; then
+            echo "Error: Config reload for debug=true not detected in logs!"
+            exit 1
+          fi
+          echo "Config reload test passed successfully!"
