--- a/pipelines/test/tw/header-check.yaml
+++ b/pipelines/test/tw/header-check.yaml
@@ -8,8 +8,20 @@ inputs:
     description: check the header files in provided packages
     required: false
     default: "${{context.name}}"
+  files:
+    description: check specific headers by file name
+    required: false
+    default: ""
+  configure-opts:
+    description: any additional configure options required for the headers in this package
+    required: false
+    default: ""
 
 pipeline:
   - name: check header files using header-check
     runs: |
-      header-check "--packages=${{context.name}}"
+      if [ -z "${{inputs.files}}" ]; then
+        header-check --packages="${{inputs.packages}}" --configure-opts="${{inputs.configure-opts}}"
+      else
+        header-check --files="${{inputs.files}}" --configure-opts="${{inputs.configure-opts}}"
+      fi
