Fix tests that had both 'uses' and 'runs' in a pipeline.
All of these packages had a test/pipeline stanza like this

    - uses: thing
      runs: |
        some stuff here

That is not intended to be valid, and melange would chose
one or the other in that case.

--- a/buildkitd.yaml
+++ b/buildkitd.yaml
@@ -82,7 +82,7 @@ test:
         timeout: 60
         expected_output: |
           running server
-      runs: |
+    - runs: |
         buildctl-daemonless.sh --version
         buildctl-daemonless.sh --help
         buildkitd --version
