--- a/clang-18.yaml
+++ b/clang-18.yaml
@@ -272,7 +272,7 @@ test:
     - uses: test/compiler-hardening-check
       with:
         cc: clang-18
-      runs: |
+    - runs: |
         amdgpu-arch --version
         amdgpu-arch --help
         clang --version
