--- a/couchdb-3.3.yaml
+++ b/couchdb-3.3.yaml
@@ -138,7 +138,7 @@ test:
               echo "Got \"$found\" in response from $url. Expected \"$expected\""
               exit 1
           fi
-      runs: |
+    - runs: |
         remsh --version
         remsh --help
 
