--- a/fluent-operator.yaml
+++ b/fluent-operator.yaml
@@ -119,7 +119,7 @@ test:
         - etcd
   pipeline:
     - uses: test/kwok/cluster
-      runs: |
+    - runs: |
         manager --help
     - name: "Test operator"
       runs: |
