--- a/git.yaml
+++ b/git.yaml
@@ -134,7 +134,7 @@ test:
       HOME: /tmp
   pipeline:
     - uses: test/hardening-check
-      runs: |
+    - runs: |
         git --help
         scalar version
     - name: Verify git installation
