--- a/helm-operator.yaml
+++ b/helm-operator.yaml
@@ -47,10 +47,10 @@ test:
         - curl
         - kustomize
   pipeline:
-    - uses: test/kwok/cluster
-      runs: |
+    - runs: |
         helm-operator version
         helm-operator --help
+    - uses: test/kwok/cluster
     - name: Fetch the testdata from the source repo
       runs: |
         git clone --depth=1 https://github.com/operator-framework/operator-sdk.git
