--- a/kubernetes-csi-driver-hostpath.yaml
+++ b/kubernetes-csi-driver-hostpath.yaml
@@ -48,7 +48,7 @@ test:
         - kubernetes-csi-livenessprobe
   pipeline:
     - uses: test/kwok/cluster
-      runs: |
+    - runs: |
         hostpathplugin --version
         hostpathplugin --help
     - runs: |
