--- a/llvm.yaml
+++ b/llvm.yaml
@@ -418,7 +418,7 @@ subpackages:
         - uses: test/compiler-hardening-check
           with:
             cc: clang-${{vars.major-version}}
-          runs: |
+        - runs: |
             amdgpu-arch --version
             amdgpu-arch --help
             clang --version
