--- a/lvm-driver.yaml
+++ b/lvm-driver.yaml
@@ -67,7 +67,7 @@ test:
         - git
   pipeline:
     - uses: test/kwok/cluster
-      runs: |
+    - runs: |
         lvm-driver --help
     - runs: |
         sleep 5
