--- a/metacontroller.yaml
+++ b/metacontroller.yaml
@@ -45,7 +45,7 @@ test:
         - kustomize
   pipeline:
     - uses: test/kwok/cluster
-      runs: |
+    - runs: |
         metacontroller --help
     - name: Fetch the testdata from the source repo
       runs: |
