--- a/openpmix.yaml
+++ b/openpmix.yaml
@@ -86,7 +86,7 @@ test:
         tag: v${{package.version}}
         expected-commit: 9ea8964e9fb17ebe3aa8ece83926a2b972cfec14
         recurse-submodules: true
-      runs: |
+    - runs: |
         palloc --version
         palloc --help
         pattrs --version
