--- a/perl.yaml
+++ b/perl.yaml
@@ -195,7 +195,7 @@ test:
     - uses: test/hardening-check
       with:
         args: --nofortify --nostackprotector
-      runs: |
+    - runs: |
         perl --help
         perl${{package.version}} --version
         perl${{package.version}} --help
