--- a/py3-findpython.yaml
+++ b/py3-findpython.yaml
@@ -98,7 +98,7 @@ test:
     - uses: python/import
       with:
         import: ${{vars.pypi-package}}
-      runs: |
+    - runs: |
         findpython --help
         findpython --version
         findpython --all
