--- a/py3-nltk.yaml
+++ b/py3-nltk.yaml
@@ -119,7 +119,7 @@ test:
       with:
         imports: |
           import nltk
-      runs: |
+    - runs: |
         nltk --version
         nltk --help
 
