--- a/py3-pbs_installer.yaml
+++ b/py3-pbs_installer.yaml
@@ -100,7 +100,7 @@ test:
     - uses: python/import
       with:
         import: ${{vars.pypi-package}}
-      runs: |
+    - runs: |
         cd $(mktemp -d)
         pbs-install 3.10 -d test1 -v
         version=$(test1/bin/python3 -c "import sys; print(f'{sys.version_info.major}.{sys.version_info.minor}')")
