--- a/py3-pip.yaml
+++ b/py3-pip.yaml
@@ -72,7 +72,7 @@ subpackages:
           uses: python/import
           with:
             import: pip
-          runs: |
+        - runs: |
             pip --version
             pip --help
             pip wheel --help
