--- a/py3-poetry.yaml
+++ b/py3-poetry.yaml
@@ -123,7 +123,7 @@ test:
     - uses: python/import
       with:
         import: ${{vars.pypi-package}}
-      runs: |
+    - runs: |
         poetry --help
     - runs: |
         poetry --version
