--- a/py3-wheel.yaml
+++ b/py3-wheel.yaml
@@ -75,6 +75,6 @@ test:
     - uses: python/import
       with:
         import: wheel
-      runs: |
+    - runs: |
         wheel version
         wheel --help
