--- a/thingsboard.yaml
+++ b/thingsboard.yaml
@@ -140,10 +140,10 @@ subpackages:
             unzip thingsboard.jar
             ls BOOT-INF/lib/ | grep -q "tomcat-embed-core" || { echo "tomcat-embed-core not found"; exit 1; }
         - name: Test server logs
-          runs: |
-            mkdir -p /var/log/thingsboard/
           uses: test/daemon-check-output
           with:
+            setup: |
+              mkdir -p /var/log/thingsboard/
             start: "start-tb-node.sh"
             timeout: 30
             expected_output: |
