--- a/vcluster.yaml
+++ b/vcluster.yaml
@@ -70,7 +70,7 @@ test:
         - jq
   pipeline:
     - uses: test/kwok/cluster
-      runs: |
+    - runs: |
         syncer --help
         vcluster --help
     - name: Ensure accurate version is embedded in the build
