--- a/trust-manager.yaml
+++ b/trust-manager.yaml
@@ -31,6 +31,7 @@ pipeline:
     with:
       deps: |-
         golang.org/x/crypto@v0.35.0
+      modroot: ./trust-manager
 
   - runs: |
       cd trust-manager
