--- a/jitsucom-bulker.yaml
+++ b/jitsucom-bulker.yaml
@@ -33,6 +33,7 @@ pipeline:
         golang.org/x/oauth2@v0.27.0
         golang.org/x/crypto@v0.35.0
       modroot: ./ingest
+      tidy: false
 
   - uses: go/bump
     with:
