--- a/azure-cli-dev.yaml
+++ b/azure-cli-dev.yaml
@@ -7,17 +7,17 @@ package:
     - license: MIT
   dependencies:
     runtime:
-      - py3-cryptography #use the latest version 
+      - py3-cryptography        #use the latest python run time - USER BEWARE
 environment:
   contents:
     packages:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - py3-cryptography #use the latest version 
-      - py3-pip #use the latest version 
-      - python-3 #use the latest version 
-      - python-3-dev #use the latest version 
+      - py3-cryptography        #use the latest python run time - USER BEWARE
+      - py3-pip                 #use the latest python run time - USER BEWARE
+      - python-3                #use the latest python run time - USER BEWARE
+      - python-3-dev            #use the latest python run time - USER BEWARE
 
 pipeline:
   - uses: git-checkout
