--- a/azure-cli.yaml
+++ b/azure-cli.yaml
@@ -7,18 +7,17 @@ package:
     - license: MIT
   dependencies:
     runtime:
-      - py3.10-cryptography #pin to microsoft support python 3.10
-
+      - py3.10-cryptography   #pin to microsoft supported python runtimes https://learn.microsoft.com/en-us/cli/azure/azure-cli-support-lifecycle#python-dependency
 environment:
   contents:
     packages:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - py3.10-cryptography #pin to microsoft support python 3.10
-      - py3.10-pip #pin to microsoft support python 3.10
-      - python-3.10 #pin to microsoft support python 3.10
-      - python-3.10-dev #pin to microsoft support python 3.10
+      - py3.10-cryptography   #pin to microsoft supported python runtimes https://learn.microsoft.com/en-us/cli/azure/azure-cli-support-lifecycle#python-dependency
+      - py3.10-pip            #pin to microsoft supported python runtimes https://learn.microsoft.com/en-us/cli/azure/azure-cli-support-lifecycle#python-dependency
+      - python-3.10           #pin to microsoft supported python runtimes https://learn.microsoft.com/en-us/cli/azure/azure-cli-support-lifecycle#python-dependency
+      - python-3.10-dev       #pin to microsoft supported python runtimes https://learn.microsoft.com/en-us/cli/azure/azure-cli-support-lifecycle#python-dependency
 
 pipeline:
   - uses: git-checkout
