--- a/nodejs-23.yaml
+++ b/nodejs-23.yaml
@@ -1,7 +1,7 @@
 package:
   name: nodejs-23
   version: "23.10.0" # On update, please check if -fdelete-null-pointer-checks is still required
-  epoch: 0
+  epoch: 1
   description: "JavaScript runtime built on V8 engine"
   dependencies:
     provides:
@@ -120,3 +120,12 @@ test:
         console.log(new Intl.NumberFormat('de-DE').format(1234.56));
         EOF
         node testIntl.js | grep '1,234.56' && node testIntl.js | grep '1.234,56' || exit 1
+
+subpackages:
+  - name: nodejs-23-doc
+    description: nodejs-23 documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
